kube/app/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: data-royale-core-api
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: data-royale-core-api-service
          servicePort: 3000
